# django-ftl

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  RELEASE.rst  manage.py  release.sh  requirements-dev.txt  requirements-test.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pythonpackage.yml
django_ftl/: __init__.py  apps.py  bundle.py  bundles.py  conf.py  loader.py  urls.py
django_ftl/templatetags/: ftl.py
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/api/: activator.rst  bundle.rst  index.rst
src/django_ftl/: __init__.py  apps.py  autoreload.py  bundles.py  conf.py  middleware.py  utils.py
src/django_ftl/templatetags/: ftl.py
tests/: allow_module_level_format_lazy.py  base.py  ftl_bundles.py  prevent_module_level_format.py  settings.py  test_bundle.py  test_docs.py  test_escaping.py  test_middleware.py  test_settings.py  test_templatetags.py  urls.py
tests/benchmarks/: README.md  benchmarks.py  requirements.txt
tests/locales/en/benchmarks/: benchmarks.ftl
tests/locales/en/tests/: docs.ftl  errors.ftl  escaping.ftl  functions.ftl  main.ftl  only_in_en.ftl  other.ftl  simple_view.ftl
tests/locales/fr-FR/tests/: main.ftl
tests/locales/tr/benchmarks/: benchmarks.ftl
tests/locales/tr/tests/: main.ftl  other.ftl  simple_view.ftl
tests/templates/tests/: simple_view.html
