[metadata]
name = django-ftl
version = attr: django_ftl.__version__
description = Django bindings for Fluent, the localization system from Mozilla for today.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Luke Plant
author_email = luke@lukeplant.me.uk
url = https://github.com/django-ftl/django-ftl
license = MIT
keywords = django-ftl
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir = =src
include_package_data = True
install_requires =
    fluent_compiler>=0.2
    Django>=2.0
zip_safe = False

[options.packages.find]
where = src

[wheel]
universal = 0

[flake8]
ignore = D203,E501,F405,E731,FI10,FI12,FI15,FI16,FI17,FI18,FI50,FI51,FI52,FI53,FI54,FI55,FI56,FI57,E741
exclude =
    django_ftl/migrations,
    .git,
    .tox,
    .eggs,
    docs/conf.py,
    setup.py,  # because of FI14 violation
    build,
    dist
max-line-length = 119

[isort]
line_length = 119
known_third_party = fluent,six,django_functest,django,pyinotify,fluent_compiler
known_first_party = django_ftl
skip = docs,.tox,.eggs
